--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+	padding: 0;
+	margin: 0;
+	font-family: 'Inter', sans-serif;
+	overscroll-behavior: none;
+	touch-action: none;
+	min-height: 100vh;
+	font-size: 16px;
+	/* mobile viewport bug fix */
+	min-height: -webkit-fill-available;
+	height: 100%;
+}
+
+html,
+* {
+	box-sizing: border-box;
+}
+
+.tldraw__editor {
+	/*position: fixed;
+	inset: 0px;
+	overflow: hidden;*/
+	width: 100%;
+	height: 100%;
+}
